# rag

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTION_SUMMARY.md  IMPROVEMENT_DOCUMENT_METADATA.md  README.md  pyproject.toml  repro_6222417.py  test_document_metadata.py  validate_fix_6222417.py  variables.env  versions1.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copy-pr-bot.yaml
.github/scripts/: cve-create-pr.sh
.github/skill-eval/: AGENTS.md  skills_eval_agent.py
.github/workflows/: build-push-main.yml  build-push-pr.yml  ci-pipeline.yml  cve-create-pr.yml  e2e.yml  nvbase-skill-eval.yml  publish-artifacts.yml  request-nvskills-ci.yml  run-branch-script.yml  skills-eval.yml  skills-nv-base.yml
.openclaw/: .gitignore  README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
ci/: README.md  crawl_doc_links.py  patch_nvbase.py  post-cve-report.sh  publish_wheel.sh  run_nvbase_eval.sh  run_skill_eval.sh  vectordb-cpu.yaml
docs/: PULL_REQUEST_SUMMARY.md  accuracy-benchmarks.md  accuracy_perf.md  agentic-rag.md  api-ingestor.md  api-key.md  api-rag.md  audio_ingestion.md  change-model.md  change-vectordb.md  conf.py  continuous-ingestion-object-storage.md  conversation-history.md  custom-metadata.md  data-catalog.md  debugging.md  deploy-docker-nvidia-hosted.md  deploy-docker-self-hosted.md  deploy-helm-from-repo.md  deploy-helm-openshift.md  deploy-helm.md  deploy-nim-operator.md  documentation.md  elasticsearch-configuration.md  enable-nemotron-thinking.md  evaluate.md  hybrid_search.md  image_captioning.md  index.md  llm-params.md  mcp.md  mig-deployment.md  migration-oracle-26ai.md  migration-oracle-v0.0.6-to-v0.0.7.md  migration_guide.md  milvus-configuration.md  model-profiles.md  mount-ingestor-volume.md  multi-collection-retrieval.md  multimodal-query.md  (+38 more)
examples/: README.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  vite.config.ts  vitest.config.ts
notebooks/: .env_library  README.md  building_rag_vdb_operator.ipynb  config.yaml  evaluation_01_ragas.ipynb  gt_page_mapper.py  image_input.ipynb  ingestion_api_usage.ipynb  langchain_nvidia_retriever.ipynb  langchain_retriever_usage.ipynb  launchable.ipynb  mcp_server_usage.ipynb  nat_mcp_integration.ipynb  nb_metadata.ipynb  rag_event_ingest.ipynb  rag_library_lite_usage.ipynb  rag_library_usage.ipynb  retriever_api_image.ipynb  retriever_api_usage.ipynb  summarization.ipynb
nvidia_rag_mcp/: mcp_client.py  mcp_server.py  requirements.txt
scripts/: README.md  batch_ingestion.py  extract_python_licenses.py  resolve_graph_entities.py  retriever_api_usage.py  skill_compliance_check.py  update_metadata_with_summaries.py  validate_skill_versions.py  verify_metadata_summaries.py  verify_nrl_filesystem_object_store.py
scripts/eval/: README.md  evaluate_rag.py  pyproject.toml
scripts/rag-perf/: pyproject.toml
scripts/rag-perf/configs/: quick_profile.yaml  single_run.yaml  sweep.yaml
scripts/rag-perf/examples/: queries.jsonl
scripts/rag-perf/prompts/: default_prompts.yaml
scripts/rag-perf/rag_perf/: __init__.py  __main__.py  cli.py  config.py  query.py  reporting.py  runner.py
scripts/rag-perf/rag_perf/plugin/: __init__.py  nvidia_rag.py  plugins.yaml
skill-eval/: CLAUDE.md  README.md
skill-source/: README.md  validate_skill_api_versions.py
skills/: PLAYBOOK.md  PUBLISHING_COMPLIANCE.md  README.md  TRACKER.md
src/: Dockerfile  chains.py  server.py
tests/: __init__.py
validation/: README.md  oracle_internals.py  runner.py
(+651 files in other folders)
